Merge branch 'feature/KIBONBE-234' into 'dev'
KIBONBE-234: always make geres search with bfs gemeinde

See merge request kibon/kibon-app!1209